added copy privileges in user privileges screen.

--- a/MySchoolWeb/src/main/resources/ApplicationLabels.properties
+++ b/MySchoolWeb/src/main/resources/ApplicationLabels.properties
@@ -17,6 +17,7 @@ common.website=Website
 common.icon.add=Add
 common.icon.update=Update
 common.icon.delete=Delete
+common.add=Add
 common.create=Create
 common.update=Update
 common.delete=Delete
@@ -248,8 +249,9 @@ holiday.more.days=More Than One Day
 
 # Academics Properties
 #academic.all=All Academics
-academic.create=Create Academic
+academic.add=Add Academic
 academic.update=Update Academic
+academic.delete=Delete Academic
 academic.title=Manage Academics
 academic.yearName=Academic Year
 
