--- a/MySchoolWeb/src/main/webapp/WEB-INF/web.xml
+++ b/MySchoolWeb/src/main/webapp/WEB-INF/web.xml
@@ -25,11 +25,7 @@
 
 	<!-- All Filter and Filter Mappings -->
     <filter>
-        <filter-name>ChainOfResponsiblity.Logging</filter-name>
-        <filter-class>com.myschool.web.framework.filter.LoggingFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>ChainOfResponsiblity.UserActivity</filter-name>
+        <filter-name>ChainOfResponsiblity.WebUserActivity</filter-name>
         <filter-class>com.myschool.web.framework.filter.WebUserActivityLogFilter</filter-class>
     </filter>
     <filter>
@@ -42,11 +38,7 @@
     </filter>
 
     <filter-mapping> 
-        <filter-name>ChainOfResponsiblity.Logging</filter-name>
-        <url-pattern>/*</url-pattern> 
-    </filter-mapping>
-    <filter-mapping> 
-        <filter-name>ChainOfResponsiblity.UserActivity</filter-name>
+        <filter-name>ChainOfResponsiblity.WebUserActivity</filter-name>
         <url-pattern>/*</url-pattern> 
     </filter-mapping>
     <filter-mapping> 
