Completed attendance profile and maintenance

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,17 @@ Temporary Items
 *.classpath
 *.project
 .metadata*
-MySchoolBase/target/MySchoolBase.jar
-MySchoolInfrastructure/target/MySchoolInfrastructure.jar
-MySchoolSautil/target/classes/externalize_data.properties
+true
+
+MySchoolBase/bin
+MySchoolBase/target
+MySchoolInfrastructure/bin
+MySchoolInfrastructure/target
+MySchoolSautil/bin
+MySchoolSautil/target
+MySchoolScheduler/bin
+MySchoolScheduler/target
+MySchoolService/bin
+MySchoolService/target
+MySchoolWeb/bin
+MySchoolWeb/target
