--- a/MySchoolInfrastructure/src/main/resources/config/database/standalone-datasource.properties
+++ b/MySchoolInfrastructure/src/main/resources/config/database/standalone-datasource.properties
@@ -1,6 +1,6 @@
 db.driver.class.name=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost/@DATABASE.NAME@
-db.user.name=postgres
-db.user.password=sql
+db.url=@@DB.SERVER.URL@@
+db.user.name=@@DB.USER@@
+db.user.password=@@DB.PWD@@
 
-jdbc.datasource.name=@DATABASE.NAME@_DataSource
+jdbc.datasource.name=@@DB.DATASOURCE.NAME@@
