--- a/MySchoolInfrastructure/src/main/resources/config/email/email.properties
+++ b/MySchoolInfrastructure/src/main/resources/config/email/email.properties
@@ -1,12 +1,12 @@
 # Email properties
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
-mail.smtp.host=smtp.gmail.com
-mail.smtp.port=587
+mail.smtp.host=@@SMTP.HOST@@
+mail.smtp.port=@@SMTP.PORT@@
 
-from.email.id.admin=admin@allstudents.in
-from.email.id.support=support@allstudents.in
-from.email.id.test=test@allstudents.in
+from.email.id.admin=@@APPL.EMAIL.ADMIN@@
+from.email.id.support=@@APPL.EMAIL.SUPORT@@
+from.email.id.test=@@APPL.EMAIL.TEST@@
 
-myschool.email.id=allstudents.in@gmail.com
-myschool.email.password=myschool@2013
+myschool.email.id=@@APPL.EMAIL.FROM.ACCT@@
+myschool.email.password=@@APPL.EMAIL.FROM.PWD@@
