--- a/MySchoolInfrastructure/src/main/resources/config/filesystem/FileSystem.properties
+++ b/MySchoolInfrastructure/src/main/resources/config/filesystem/FileSystem.properties
@@ -1,6 +1,6 @@
-app.base.dir=@MYSCHOOL.DIR@
-
-myschool.name=@MYSCHOOL.NAME@
+app.base.dir=@@APPL.LOCAL.DIR@@
+myschool.name=@@MYSCHOOL.NAME@@
+app.deploy.dir=${app.base.dir}/deploy
 
 ## MySchool properties
 myschool.base=MySchoolBase
@@ -19,7 +19,6 @@ email=email
 employee=employee
 exim=exim
 filesystem=filesystem
-fileserver=fileserver
 gallery=gallery
 image=image
 import=import
@@ -50,7 +49,6 @@ config.database.standalone=standalone-datasource.properties
 config.email=email.properties
 config.filesystem.xml=local-filesystem.xml
 config.web-hosted-media-server.xml=web-hosted-media-server.xml
-config.filesystem.properties=FileSystem.properties
 config.middleware.server=active-mq.properties
 config.middleware.queue=MessageQueueConfig.xml
 config.middleware.schema=MessageQueueConfig.xsd
@@ -66,7 +64,7 @@ config.spring.service=${myschool.service}.xml
 config.image.scaling=image-scaling.properties
 
 ## Config Directories
-config.dir=${app.base.dir}/${config}
+config.dir=${app.deploy.dir}/${config}
 config.application.dir=${config.dir}/${application}
 config.cache.dir=${config.dir}/${cache}
 config.database.dir=${config.dir}/${database}
@@ -91,7 +89,6 @@ config.database.file=${config.database.dir}/${config.database.standalone}
 config.email.file=${config.email.dir}/${config.email}
 config.filesystem.xml.file=${config.filesystem.dir}/${config.filesystem.xml}
 config.web-hosted-media-server.xml.file=${config.filesystem.dir}/${config.web-hosted-media-server.xml}
-config.filesystem.properties.file=${config.filesystem.dir}/${config.filesystem.properties}
 config.middleware.server.file=${config.middleware.dir}/${config.middleware.server}
 config.middleware.queue.file=${config.middleware.dir}/${config.middleware.queue}
 config.middleware.schema.file=${config.middleware.dir}/${config.middleware.schema}
@@ -105,49 +102,3 @@ config.spring.scheduler.file=${config.spring.dir}/${config.spring.scheduler}
 config.spring.sautil.file=${config.spring.dir}/${config.spring.sautil}
 config.spring.service.file=${config.spring.dir}/${config.spring.service}
 config.image.scaling.file=${config.image.dir}/${config.image.scaling}
-
-## File server directories
-fileserver.dir=${app.base.dir}/${fileserver}
-fileserver.brochures.dir=${fileserver.dir}/${brochures}
-fileserver.gallery.dir=${fileserver.dir}/${gallery}
-fileserver.images.dir=${fileserver.dir}/${image}
-fileserver.images.employee.dir=${fileserver.images.dir}/${employee}
-fileserver.images.student.dir=${fileserver.images.dir}/${student}
-fileserver.templates.dir=${fileserver.dir}/${templates}
-fileserver.templates.import.dir=${fileserver.templates.dir}/${import}
-fileserver.templates.notification.dir=${fileserver.templates.import.dir}/${notification}
-fileserver.templates.notification.email.dir=${fileserver.templates.notification.dir}/${email}
-fileserver.templates.notification.email.employee.dir=${fileserver.templates.notification.email.dir}/${employee}
-fileserver.templates.notification.email.notice_board.dir=${fileserver.templates.notification.email.dir}/${notice_board}
-fileserver.templates.notification.email.student.dir=${fileserver.templates.notification.email.dir}/${student}
-fileserver.templates.notification.sms.dir=${fileserver.templates.notification.dir}/${sms}
-fileserver.templates.notification.sms.employee.dir=${fileserver.templates.notification.sms.dir}/${employee}
-fileserver.templates.notification.sms.notice_board.dir=${fileserver.templates.notification.sms.dir}/${notice_board}
-fileserver.templates.notification.sms.student.dir=${fileserver.templates.notification.sms.dir}/${student}
-
-## Portal directories
-#portal.dir=${app.base.dir}/${portal}
-#portal.employee.dir=${portal.dir}/${employee}
-#portal.student.dir=${portal.dir}/${student}
-
-## Lib properties
-lib.dir=${app.base.dir}/${lib}
-
-## Log properties
-logs.dir=${app.base.dir}/${logs}
-
-## Script properties
-scripts.dir=${app.base.dir}/${scripts}
-
-## Test properties
-test.dir=${app.base.dir}/${test}
-test.notification.dir=${test.dir}/${notification}
-test.notification.employee.dir=${test.notification.dir}/${employee}
-test.notification.notice_board.dir=${test.notification.dir}/${notice_board}
-test.notification.student.dir=${test.notification.dir}/${student}
-
-## Tmp properties
-tmp.dir=${app.base.dir}/${tmp}
-tmp.employee.dir=${tmp.dir}/${employee}
-tmp.student.dir=${tmp.dir}/${student}
-tmp.report.dir=${tmp.dir}/${report}
