--- a/MySchoolWeb/deploy.properties
+++ b/MySchoolWeb/deploy.properties
@@ -1,13 +1,11 @@
-# web app properties
-webapp.dir=src/main/webapp
-web.archive.name=${myschool.name}.war
-web.xml=${webapp.dir}/WEB-INF/web.xml
+src.main.webapp=src/main/webapp
+src.main.webapp.web.xml=src/main/webapp/WEB-INF/web.xml
 
-webapp.resources.dir=${resources.dir}/${myschool.name}/webapp
+deploy.config.logs.web=deploy/config/logs/webapp_log4j.xml
 
-# JBoss resources
+# JBOSS files
 jboss.web.xml=jboss-web.xml
 
-# Log file names
-web.log.config.file=webapp_log4j.xml
-#web.log.file=webapp.log
+# web app properties
+#webapp.dir=src/main/webapp
+war.file=${myschool.name}.war
