--- a/MySchoolTransformation/build.xml
+++ b/MySchoolTransformation/build.xml
@@ -4,45 +4,29 @@
     <property file="deploy.properties" />
     <path id="jars-classpath">
         <fileset dir="../${lib}" includes="*.jar" />
-    	<fileset dir="../${myschool.base}/${target.dir}" includes="${myschool.base}.jar" />
+        <fileset dir="../${myschool.base}/${target.dir}" includes="${myschool.base}.jar" />
     </path>
 
     <target name="CleanBuildDeploy" depends="Clean,Build,Deploy" />
 
     <target name="Clean">
-        <echo message="Cleaning ${ant.project.name} ${basedir}" />
         <delete dir="${target.dir}" />
         <mkdir dir="${target.dir}"/>
         <mkdir dir="${classes.dir}"/>
     </target>
 
     <target name="Build">
-        <javac srcdir="${src.dir}"
+        <javac srcdir="${src.main.java}"
             destdir="${classes.dir}" classpathref="jars-classpath"
             source="1.6" target="1.6" includeantruntime="true" />
         <jar destfile="${target.dir}/${myschool.transformation}.jar" basedir="${classes.dir}" />
     </target>
 
     <target name="Deploy">
-        <copy todir="${myschool.dir}/${lib}" file="${target.dir}/${myschool.transformation}.jar" />
+        <copy file="${target.dir}/${myschool.transformation}.jar" todir="${stage.dir}/${deploy.lib}" />
         <!-- Deploy config items -->
-        <copy todir="${myschool.dir}/${config}">
-            <fileset dir="${resources.dir}/${config}" />
+        <copy todir="${stage.dir}/${deploy.config}">
+            <fileset dir="${src.main.resources.config}" />
         </copy>
-        <antcall target="UpdateResources" />
-    </target>
-
-    <target name="UpdateResources">
-        <echo message="Updating all resources at ${myschool.base.dir}/${myschool.name}/${config} " />
-        <echo message="With token '@MYSCHOOL.DIR@' = '${myschool.base.dir}/${myschool.name}'" />
-        <echo message="With token '@MYSCHOOL.NAME@' = '${myschool.name}'" />
-        <echo message="With token '@DATABASE.NAME@' = '${myschool.name}'" />
-
-        <replace dir="${myschool.base.dir}/${myschool.name}/${config}">
-          <include name="**/*.*"/>
-          <replacefilter token="@MYSCHOOL.DIR@" value="${myschool.base.dir}/${myschool.name}" />
-          <replacefilter token="@MYSCHOOL.NAME@" value="${myschool.name}" />
-          <replacefilter token="@DATABASE.NAME@" value="${myschool.name}" />
-        </replace>
     </target>
 </project>
