--- a/MySchoolWeb/build.xml
+++ b/MySchoolWeb/build.xml
@@ -1,4 +1,4 @@
-<project name="MySchoolWeb" default="CleanBuildDeploy">
+<project name="MySchoolWeb">
     <description>Builds and deploys MySchool to server</description>
 
     <property file="deploy.properties" />
@@ -11,139 +11,33 @@
         <fileset dir="../${myschool.service}/${target.dir}" includes="${myschool.service}.jar" />
     </path>
 
-    <target name="CleanBuildDeploy" depends="Clean,Build,Deploy" />
-
     <target name="Clean">
-        <echo message="Cleaning ${ant.project.name} ${basedir}" />
         <delete dir="${target.dir}" />
         <mkdir dir="${target.dir}"/>
         <mkdir dir="${classes.dir}"/>
     </target>
 
     <target name="Build">
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"
+        <javac srcdir="${src.main.java}" destdir="${classes.dir}"
             source="1.6" target="1.6" classpathref="jars-classpath" includeantruntime="true" />
-
-        <echo message="Preparing {jboss.web.xml} " />
-        <copy file="${resources.dir}/${jboss.web.xml}" tofile="${target.dir}/${jboss.web.xml}"> 
-            <filterchain>
-               <replacetokens>
-                    <token key="MYSCHOOL.NAME" value="${myschool.name}"/>
-                </replacetokens> 
-            </filterchain> 
-        </copy>
     </target>
 
-    <target name="Deploy" if="myschool.name">
-        <antcall target="DeployWar-Tomcat" />
-        <antcall target="DeployWar-JBoss" />
-    </target>
-
-    <target name="DeployWar-Tomcat" if="deploy.tomcat" depends="BuildWar-Tomcat">
-        <copy file="${target.dir}/${web.archive.name}" todir="${tomcat.deploy.dir}" />
-        <copy todir="${tomcat.lib}">
-            <fileset dir="../${lib}">
-                <include name="postgresql-9.1-901.jdbc4.jar"/>
-            </fileset>
-        </copy>
-    </target>
-
-    <target name="DeployWar-JBoss" if="deploy.jboss" depends="BuildWar-JBoss">
-        <copy file="${myschool.dir}/${config}/${database}/${jboss.ds.ultimate}" todir="${jboss.deploy.dir}" />
-        <copy file="${target.dir}/${web.archive.name}" todir="${jboss.deploy.dir}" />
-        <copy todir="${jboss.lib}">
-            <fileset dir="../${lib}">
-                <include name="postgresql-9.1-901.jdbc4.jar"/>
-            </fileset>
-        </copy>
-    </target>
-
-    <target name="BuildWar-Tomcat" if="deploy.tomcat">
-        <delete file="${target.dir}/${web.archive.name}" />
+    <target name="DeployResources">
         <!-- Deploy config items -->
-        <copy todir="${myschool.dir}/${config}">
-            <fileset dir="${resources.dir}/${config}" />
+        <copy todir="${stage.dir}/${deploy.config}">
+            <fileset dir="${src.main.resources.config}" />
         </copy>
-        <antcall target="UpdateResources" />
-        <copy tofile="${target.dir}/${log4j.file}"
-            file="${myschool.base.dir}/${myschool.name}/${config}/${logs}/${web.log.config.file}"/>
-        <copy tofile="${target.dir}/${filesystem.properties}"
-            file="${myschool.base.dir}/${myschool.name}/${config}/${filesystem}/${filesystem.properties}"/>
-
-        <war destfile="${target.dir}/${web.archive.name}" webxml="${web.xml}">
-            <metainf file="${myschool.dir}/${config}/${database}/${tomcat.context.ultimate}" />
-            <manifest>
-                <attribute name="Built-On" value="${build-info.current-date}" />
-                <attribute name="Built-At" value="${build-info.current-time}" />
-            </manifest>
-
-            <webinf refid="spring-contexts" />
-
-            <classes dir="${classes.dir}" />
-            <classes dir="${target.dir}" includes="*.properties,log4j.xml" />
-            <classes dir="${resources.dir}" includes="*.properties" />
-
-            <fileset dir="${webapp.dir}" />
-
-            <lib refid="internal-libraries" />
-            <lib refid="external-libraries" />
-            <lib refid="libraries-for-tomcat" />
-        </war>
-    </target>
-
-    <target name="BuildWar-JBoss" if="deploy.jboss">
-        <delete file="${target.dir}/${web.archive.name}" />
-        <!-- Deploy config items -->
-        <copy todir="${myschool.dir}/${config}">
-            <fileset dir="${resources.dir}/${config}" />
-        </copy>
-        <antcall target="UpdateResources" />
-        <copy tofile="${target.dir}/${log4j.file}"
-            file="${myschool.base.dir}/${myschool.name}/${config}/${logs}/${web.log.config.file}"/>
-        <copy tofile="${target.dir}/${filesystem.properties}"
-            file="${myschool.base.dir}/${myschool.name}/${config}/${filesystem}/${filesystem.properties}"/>
-
-        <war destfile="${target.dir}/${web.archive.name}" webxml="${web.xml}">
-            <manifest>
-                <attribute name="Built-On" value="${build-info.current-date}" />
-                <attribute name="Built-At" value="${build-info.current-time}" />
-            </manifest>
-
-            <webinf refid="spring-contexts" />
-            <webinf file="${target.dir}/${jboss.web.xml}" />
-
-            <classes dir="${classes.dir}" />
-            <classes dir="${target.dir}" includes="*.properties,log4j.xml" />
-            <classes dir="${resources.dir}" includes="*.properties" />
-
-            <fileset dir="${webapp.dir}" />
-            <fileset dir="${webapp.resources.dir}" />
-
-            <lib refid="internal-libraries" />
-            <lib refid="external-libraries" />
-        </war>
-    </target>
-
-    <target name="UpdateResources">
-        <echo message="Updating all resources at ${myschool.base.dir}/${myschool.name}/${config} " />
-        <echo message="With token '@LOG.FILE.LOCATION@' = '${myschool.dir}/${logs}'" />
-        <!--<echo message="With token '@LOG.FILE.NAME@' = '${myschool.dir}/${logs}/${web.log.file}'" />-->
-        <replace dir="${myschool.base.dir}/${myschool.name}/${config}">
-          <include name="**/*.*"/>
-            <replacefilter token="@LOG.FILE.LOCATION@" value="${myschool.dir}/${logs}"/>
-            <!--<replacefilter token="@LOG.FILE.NAME@" value="${myschool.dir}/${logs}/${web.log.file}"/>-->
-        </replace>
     </target>
 
     <!-- SPRING context files -->
-    <fileset id="spring-contexts" dir="${myschool.dir}/${config}/${spring}">
+    <fileset id="spring-contexts" dir="${stage.dir}/${deploy.config.spring}">
         <include name="${myschool.base}.xml"/>
         <include name="${myschool.infrastructure}.xml"/>
         <include name="${myschool.transformation}.xml"/>
         <include name="${myschool.service}.xml"/>
     </fileset>
 
-    <fileset id="internal-libraries" dir="${myschool.dir}/${lib}">
+    <fileset id="internal-libraries" dir="${stage.dir}/${deploy.lib}">
         <!-- Application Jars -->
         <include name="${myschool.base}.jar" />
         <include name="${myschool.infrastructure}.jar" />
@@ -152,75 +46,138 @@
     </fileset>
 
     <fileset id="external-libraries" dir="../${lib}">
-        <!-- Third party Jars -->
+        <!-- Application specific Jars -->
+        <include name="MySchoolSautil.jar" />
+        <include name="MySchoolBase.jar" />
+        <include name="MySchoolService.jar" />
+        <include name="MySchoolTransformation.jar" />
+        <include name="MySchoolInfrastructure.jar" />
+        <!-- Third party jars -->
         <include name="activemq-all-5.6.0.jar" />
-        <include name="batik-awt-util-1.6.jar" />
-        <include name="batik-svggen-1.6.jar" />
-        <include name="batik-util-1.6.jar" />
-        <include name="batik-xml-1.6.jar" />
+        <include name="aopalliance.jar" />
+        <include name="asm-3.3.1.jar" />
+        <include name="aspectjrt-1.6.11.jar" />
+        <include name="aspectjweaver-1.6.11.jar" />
+        <include name="cglib-2.2.jar" />
         <include name="commons-beanutils-1.8.0.jar" />
         <include name="commons-codec.jar" />
         <include name="commons-digester-2.1.jar" />
         <include name="commons-fileupload-1.2.2.jar" />
         <include name="commons-httpclient.jar" />
         <include name="commons-io-2.1.jar" />
-        <include name="commons-lang3-3.1.jar" />
         <include name="commons-logging-1.1.1.jar" />
-        <include name="commons-pool-1.6.jar" />
+        <include name="concurrent-1.3.3.jar" />
         <include name="dynamicreports-core-2.4.1.jar" />
-        <include name="filters-2.0.235.jar" />
-        <include name="itext-2.1.7.jar" />
         <include name="jasperreports-4.5.1.jar" />
-        <include name="jcaptcha-api-1.0.jar" />
         <include name="jcaptcha-2.0-alpha-1-SNAPSHOT.jar" />
+        <include name="jcaptcha-api-1.0.jar" />
         <include name="jcaptcha-integration-simple-servlet-2.0-alpha-1-SNAPSHOT.jar" />
-        <include name="jcommon-1.0.15.jar" />
-        <include name="jcs-1.3.jar"/>
-        <include name="jettison-1.3.3.jar"/>
-        <include name="jfreechart-1.0.12.jar" />
+        <include name="jcs-1.3.jar" />
+        <include name="jettison-1.3.3.jar" />
         <include name="json-rpc-1.0.jar" />
         <include name="jsoup-1.8.2.jar" />
-        <include name="jstl.jar" />
+        <include name="log4j.jar" />
+        <include name="mail.jar" />
+        <!-- Spring Jars -->
+        <include name="org.springframework.aop-3.0.5.RELEASE.jar" />
         <include name="org.springframework.asm-3.0.5.RELEASE.jar" />
         <include name="org.springframework.beans-3.0.5.RELEASE.jar" />
         <include name="org.springframework.context-3.0.5.RELEASE.jar" />
+        <include name="org.springframework.context.support-3.0.5.RELEASE.jar" />
         <include name="org.springframework.core-3.0.5.RELEASE.jar" />
         <include name="org.springframework.expression-3.0.5.RELEASE.jar" />
         <include name="org.springframework.jdbc-3.0.5.RELEASE.jar" />
         <include name="org.springframework.web-3.0.5.RELEASE.jar" />
         <include name="org.springframework.web.servlet-3.0.5.RELEASE.jar" />
         <include name="poi-3.7.jar" />
-        <include name="quartz-2.2.0.jar"/>
-        <include name="thumbnailator-0.4.5-all.jar"/>
+        <include name="quartz-2.2.0.jar" />
+        <include name="quality-check-1.1.jar" />
         <include name="tiles-api-2.2.2.jar" />
         <include name="tiles-core-2.2.2.jar" />
         <include name="tiles-jsp-2.2.2.jar" />
         <include name="tiles-servlet-2.2.2.jar" />
         <include name="tiles-template-2.2.2.jar" />
-        <include name="xpp3-1.1.4c.jar" />
-        <include name="xstream-1.4.4.jar" />
-
-        <!-- AOP Jars -->
-        <include name="aopalliance.jar" />
-        <include name="aspectjrt-1.6.11.jar" />
-        <include name="aspectjweaver-1.6.11.jar" />
-        <include name="org.springframework.aop-3.0.5.RELEASE.jar" />
-        <include name="org.springframework.context.support-3.0.5.RELEASE.jar" />
-        <include name="cglib-2.2.jar" />
-        <include name="asm-3.3.1.jar" />
-
-        <!-- User Agent Jars -->
+        <include name="thumbnailator-0.4.5-all.jar" />
         <include name="uadetector-core-0.9.22.jar" />
         <include name="uadetector-resources-2014.10.jar" />
-        <include name="quality-check-1.1.jar" />
-        <include name="logback-core-0.9.6.jar" />
-        <include name="logback-classic-0.9.jar" />
+        <include name="xstream-1.4.4.jar" />
+        <include name="xpp3-1.1.4c.jar" />
     </fileset>
 
     <fileset id="libraries-for-tomcat" dir="../${lib}">
         <!-- Application Jars -->
+        <include name="jstl.jar" />
         <include name="mail.jar" />
         <include name="concurrent-1.3.3.jar" />
     </fileset>
 
+    <target name="BuildWar-JBoss">
+        <delete file="${target.dir}/*.*" />
+
+        <copy tofile="${target.dir}/${log4j.file}" file="${@@APPL.LOCAL.DIR@@}/${deploy.config.logs.web}"/>
+        <copy tofile="${target.dir}/${filesystem.file}" file="${@@APPL.LOCAL.DIR@@}/${deploy.config.filesystem.file}"/>
+
+        <war destfile="${target.dir}/${war.file}" webxml="${src.main.webapp.web.xml}">
+            <manifest>
+                <attribute name="Built-On" value="${build-info.current-date}" />
+                <attribute name="Built-At" value="${build-info.current-time}" />
+            </manifest>
+
+            <webinf refid="spring-contexts" />
+            <webinf file="${stage.dir}/${deploy.config.web}/${jboss.web.xml}" />
+
+            <classes dir="${classes.dir}" />
+            <classes dir="${target.dir}" includes="*.properties,log4j.xml" />
+            <classes dir="${src.main.resources}" includes="*.properties" />
+            <fileset dir="${src.main.webapp}" />
+            <lib refid="internal-libraries" />
+            <lib refid="external-libraries" />
+        </war>
+        <delete file="${target.dir}/${log4j.file}" />
+        <delete file="${target.dir}/${filesystem.file}" />
+
+        <copy todir="${target.dir}">
+            <fileset dir="../${lib}">
+                <include name="postgresql-9.1-901.jdbc4.jar"/>
+            </fileset>
+            <fileset dir="${@@APPL.LOCAL.DIR@@}/${deploy.config.database}">
+                <include name="${jboss.ds.ultimate}"/>
+            </fileset>
+        </copy>
+    </target>
+
+    <target name="BuildWar-Tomcat">
+        <delete>
+            <fileset dir="${target.dir}" includes="*.*"/>
+        </delete>
+
+        <copy tofile="${target.dir}/${log4j.file}" file="${@@APPL.LOCAL.DIR@@}/${deploy.config.logs.web}"/>
+        <copy tofile="${target.dir}/${filesystem.file}" file="${@@APPL.LOCAL.DIR@@}/${deploy.config.filesystem.file}"/>
+
+        <war destfile="${target.dir}/${war.file}" webxml="${src.main.webapp.web.xml}">
+            <metainf file="${@@APPL.LOCAL.DIR@@}/${deploy.config.database}/${tomcat.context.ultimate}" />
+            <manifest>
+                <attribute name="Built-On" value="${build-info.current-date}" />
+                <attribute name="Built-At" value="${build-info.current-time}" />
+            </manifest>
+
+            <webinf refid="spring-contexts" />
+
+            <classes dir="${classes.dir}" />
+            <classes dir="${target.dir}" includes="*.properties,log4j.xml" />
+            <classes dir="${src.main.resources}" includes="*.properties" />
+            <fileset dir="${src.main.webapp}" />
+            <lib refid="internal-libraries" />
+            <lib refid="external-libraries" />
+            <lib refid="libraries-for-tomcat" />
+        </war>
+        <delete file="${target.dir}/${log4j.file}" />
+        <delete file="${target.dir}/${filesystem.file}" />
+
+        <copy todir="${target.dir}">
+            <fileset dir="../${lib}">
+                <include name="postgresql-9.1-901.jdbc4.jar"/>
+            </fileset>
+        </copy>
+    </target>
 </project>
