Fixed issues related to image display in employee and student modules.
Fixed student and employee modules after switching to Storage Access
agent.
Added "image not added yet" and "image not available" images. These
images will be serveed from the local war file.
Updated view_settings screen. adde profile photo.
User profile pic will be displayed on top right corner of the page after
login.
Widget magnific popup added back.

--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,18 @@ Temporary Items
 *.classpath
 *.project
 .metadata*
+.recommenders*
 true
 
-DataLoaders/
+CloudAccess
+DataLoaders
+
+MyschoolDataRouting/bin
+MyschoolDataRouting/target
+MyschoolIntegration/bin
+MyschoolIntegration/target
+MyschoolIntegration/src/main/resources/samples
+
 MySchoolBase/bin
 MySchoolBase/target
 MySchoolInfrastructure/bin
@@ -63,3 +72,7 @@ MySchoolService/target
 MySchoolTransformation/target
 MySchoolWeb/bin
 MySchoolWeb/target
+
+MySchoolWeb/src/main/webapp/images/organization
+MySchoolWeb/src/main/webapp/images/Universe
+MySchoolWeb/src/main/webapp/themes
