Public data access and login flow changs.
Removed notice board and Find Us from menu (from jsp, java code and db
scripts)
Removed code marked as deprecated and removed its references
Removed small Login flows and added broader flows that furhter can
support OAuth
Moved all the views related to login are under acl and public
Feature images will be within the war file. Opted them out of storage
server. added sample images
Enhanced public dashboard screen and provided role specific login links.
Introduced role specific login.
All the pages those do not require login will be accessed through
/public

--- a/MySchoolWeb/src/main/resources/ApplicationMessages.properties
+++ b/MySchoolWeb/src/main/resources/ApplicationMessages.properties
@@ -1,3 +1,4 @@
+# Remove these login messages
 login.id=Please enter your Login ID
 login.password=Please enter your Password
 login.invalid=Incorrect login id or password.
