Google reCAPTCHA agent completed. Ajax and progress scripts added
Opened up login tables for oauth support.
Part of Middleware code removed - outbound and inbound
Google reCAPTCHA is operational
Completed login By Role - Removed prefixes for usernames for
student/employee
added scripts for loading progress and ajax
Modifed header and footer links a bit.
Self submit forms modified and tested.

--- a/MySchoolInfrastructure/src/main/resources/config/filesystem/FileSystem.properties
+++ b/MySchoolInfrastructure/src/main/resources/config/filesystem/FileSystem.properties
@@ -13,6 +13,7 @@ myschool.service=MySchoolService
 application=application
 brochures=brochures
 cache=cache
+captcha=captcha
 config=config
 database=database
 email=email
@@ -44,12 +45,13 @@ xml=xml
 ## Config Files to use
 config.app=app-config.xml
 config.cache=jcs-cache.properties
+config.captcha=google-captcha.properties
 config.database.jboss=jboss-ds.xml
 config.database.tomcat=tomcat-context.xml
 config.database.standalone=standalone-datasource.properties
 config.email=email.properties
-config.filesystem.xml=local-filesystem.xml
-config.storage-access.xml=storage-access.xml
+config.filesystem=local-filesystem.xml
+config.storage=storage-access.xml
 config.middleware.server=active-mq.properties
 config.middleware.queue=MessageQueueConfig.xml
 config.middleware.schema=MessageQueueConfig.xsd
@@ -68,6 +70,7 @@ config.image.scaling=image-scaling.properties
 config.dir=${app.deploy.dir}/${config}
 config.application.dir=${config.dir}/${application}
 config.cache.dir=${config.dir}/${cache}
+config.captcha.dir=${config.dir}/${captcha}
 config.database.dir=${config.dir}/${database}
 config.image.dir=${config.dir}/${image}
 config.email.dir=${config.dir}/${email}
@@ -85,12 +88,13 @@ config.xml.dir=${config.dir}/${xml}
 ## Config Files
 config.application.app.file=${config.application.dir}/${config.app}
 config.cache.file=${config.cache.dir}/${config.cache}
+config.captcha.file=${config.captcha.dir}/${config.captcha}
 config.database.jboss.file=${config.database.dir}/${config.database.jboss}
 config.database.tomcat.file=${config.database.dir}/${config.database.tomcat}
 config.database.file=${config.database.dir}/${config.database.standalone}
 config.email.file=${config.email.dir}/${config.email}
-config.filesystem.xml.file=${config.filesystem.dir}/${config.filesystem.xml}
-config.storage-access.xml.file=${config.storage.dir}/${config.storage-access.xml}
+config.filesystem.file=${config.filesystem.dir}/${config.filesystem}
+config.storage.file=${config.storage.dir}/${config.storage}
 config.middleware.server.file=${config.middleware.dir}/${config.middleware.server}
 config.middleware.queue.file=${config.middleware.dir}/${config.middleware.queue}
 config.middleware.schema.file=${config.middleware.dir}/${config.middleware.schema}
