--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -76,3 +76,4 @@ MySchoolWeb/target
 MySchoolWeb/src/main/webapp/images/organization
 MySchoolWeb/src/main/webapp/images/Universe
 MySchoolWeb/src/main/webapp/themes
+/MySchool_20161015.zip
